--- a/.drone.yml
+++ b/.drone.yml
@@ -1,5 +1,6 @@
 pipeline:
     hello:
         image: ubuntu
+        secrets: [ hello ]
         commands:
-            - echo hello cloudreach
+            - echo hello ${HELLO}
